gcc/testsuite/algol68/compile/modules/program-error-outside-access-1.a68
{ dg-modules "module1" }

begin int x = access Module1 ( beast_number ),
          y = beast_number; { dg-error "declared" }
      skip
end
